[package]
name = "cait-sith"
description = "Threshold ECDSA via Triples"
repository = "https://github.com/cronokirby/cait-sith"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
auto_ops = "0.3.0"
ck-meow = "0.1.0"
digest = "0.10.5"
ecdsa = { version = "0.15.1", features = ["digest", "hazmat"] }
event-listener = "2.5.3"
k256 = { version = "0.12.0", features = ["sha256", "ecdsa", "serde"] }
magikitten = "0.2.0"
rand_core = "0.6.4"
rmp-serde = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
smol = "1.3.0"
subtle = "2.4.1"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "protocols"
harness = false
